<resources>
    <string name="app_name">passWordly</string>
    <string name="m1_oldman">Hey, wanderer! You must be that hacker I’ve been hearing so much about… Doesn’t matter. Nobody can do it. Many have tried… What’s your name? Who knows, maybe when you lose I can use it as my password. And remember once you say it there is no way back!</string>
    <string name="m2_oldman">Well, Name, let’s get this over with. The rules of the game are quite simple: you will be given a password — a singular noun consisting of 4, 5 or 6 letters depending on the difficulty you chose. You are going to have to use all your vocabulary to crack the password by sequentially entering words consisting of the same number of letters the password does. If an entered word contains a letter that appears in the password, one of two things can happen: the letter will turn green if its position in the entered word matches its position in the password and yellow if it doesn’t. Each entered word must actually exist. You’re allowed 6 guesses. It may take you less than 6 but I really doubt that… For each cracked password I’ll give you one trophy: bronze – for a 4-letter password, silver – for a 5-letter and finally gold – for a 6-letter.</string>
    <string name="got_it_message">Got it!</string>
    <string name="hint_username">username</string>
    <string name="m3_oldman">I’ll even give you a head start. Here are some tips you can feel free to use: \n The game is tactical. There is absolutely no need to guess the password right away. Try opening some letters and their positions first. \n Even though my passwords are the strongest and the hardest to crack they’re still words which means commonly used letters are welcome. But I didn’t tell you that!.. cough-cough… \n If you already know the position of a certain letter and have a few guesses left, it wouldn’t be a bad idea to enter the words in which the letter isn’t in this particular position. But it only works if you have more than one guess left, otherwise go all in and use your last guess with surgical precision! \n Good luck, Name. Trust me you are going to need it…</string>
    <string name="lets_go_message">Let\'s go!</string>
    <string name="respond">RESPOND</string>
    <string name="username_hint">Hacker2004</string>
    <string name="game_name">passWordly</string>
    <string name="difficulty_text">Difficulty</string>
    <string name="easy_difficulty_selector_text">Easy</string>
    <string name="normal_difficulty_selector_text">Normal</string>
    <string name="hard_difficulty_selector_text">Hard</string>
    <string name="start_button_text">Start</string>
    <string name="rules_button_text">Rules</string>
    <string name="profile_button_text">Profile</string>
    <string name="profile_title">Profile</string>
    <string name="total_games_text">Total games: %1$d</string>
    <string name="games_won_text">Games won: %1$.1f%%</string>
    <string name="back_button_text">Back</string>
    <string name="dictionary_button_text">Dictionary</string>
    <string name="dictionary_title">Dictionary</string>
    <string name="empty_list_text">There is nothing to see here, yet</string>
    <string name="victory_text">Victory</string>
    <string name="defeat_text">Defeat</string>
    <string name="game_win_text_1">That was a tough one! I guess you are better than I expected… Here is the definition, just in case:\n \n%1$s \n \nYou can find the definition later in your Dictionary.</string>
    <string name="game_win_text_2">Wow! Nobody could crack this one… until now, I guess… You might want to look at the definition:\n \n%1$s \n \nYou can check all the definitions out in your Dictionary.</string>
    <string name="game_win_text_3">No way! I’m getting a little nervous but it’s okay, I have enough of those left to make you despair! Here is the definition, just in case:\n \n%1$s \n \nYou know where all the definitions are kept, don’t you? That’s right, in your very own Dictionary!</string>
    <string name="game_win_text_4">I may be calling the police… since you broke all the speed limits! A little memory refreshing never hurt anyone, even the fastest ones might need it:\n \n%1$s \n \nSpeaking of refreshing memory, there is no better place for such activity than your very own Dictionary.</string>
    <string name="game_lose_text_1">Ha! I told you, my passwords are the strongest. Take it easy though, to be fair, this was one of the trickiest. You might encounter this very password in the future so stay focused, although I really don’t think it will help…</string>
    <string name="game_lose_text_2">Got you! For a second there I really thought you’d had a chance… I don’t anymore! Since I found your Achilles’ heel I might be using this very password in the future, so keep it up!</string>
    <string name="game_lose_text_3">Hackers come and go but my passwords are timeless. Something’s telling me this is’t the last time you’re knocked down by this one…</string>
    <string name="plus_1_text">+1</string>
    <string name="game_over_text">Oops, looks like you hacked the system! There are no passwords left! I can\'t believe you won…</string>
    <string name="username_constraints_text">The username has a min length of 1 and a max length of 25 and can only use letters of Latin alphabet and digits</string>

    <string name="pref_key_found_words" translatable="false">FOUND_WORDS</string>
    <string name="pref_key_gold_trophies" translatable="false">GOLD_TROPHIES</string>
    <string name="pref_key_silver_trophies" translatable="false">SILVER_TROPHIES</string>
    <string name="pref_key_bronze_trophies" translatable="false">BRONZE_TROPHIES</string>
    <string name="pref_key_total_games" translatable="false">TOTAL_GAMES</string>
    <string name="pref_key_games_won" translatable="false">GAMES_WON</string>
    <string name="pref_key_player_name" translatable="false">PLAYER_NAME</string>
    <string name="pref_key_chat_completed" translatable="false">IS_CHAT_COMPLETED</string>
</resources>
