<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/game_name"
        android:textColor="@color/primary"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:divider="@drawable/empty_divider"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_text"
            android:textColor="@color/primary"
            android:textSize="15sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_easy"
            android:layout_width="156dp"
            android:layout_height="@dimen/btn_height"
            android:background="@drawable/button"
            android:text="@string/easy_difficulty_selector_text"
            android:textColor="@color/primary"
            android:textSize="15sp"
            app:backgroundTint="@color/element_bg" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_normal"
            android:layout_width="156dp"
            android:layout_height="@dimen/btn_height"
            android:background="@drawable/button"
            android:text="@string/normal_difficulty_selector_text"
            android:textColor="@color/primary"
            android:textSize="15sp"
            app:backgroundTint="@color/element_bg" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_hard"
            android:layout_width="156dp"
            android:layout_height="@dimen/btn_height"
            android:background="@drawable/button"
            android:text="@string/hard_difficulty_selector_text"
            android:textColor="@color/primary"
            android:textSize="15sp"
            app:backgroundTint="@color/element_bg" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="116dp"
        android:background="@drawable/button"
        android:text="@string/start_button_text"
        android:textColor="@color/primary"
        android:textSize="15sp"
        app:backgroundTint="@color/element_bg"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:divider="@drawable/empty_divider"
        android:orientation="horizontal"
        android:showDividers="middle"
        app:layout_constraintTop_toBottomOf="@id/btn_start">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_rules"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_height"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/rules_button_text"
            android:textColor="@color/primary"
            android:textSize="15sp"
            app:backgroundTint="@color/element_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_start" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_profile"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_height"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/profile_button_text"
            android:textColor="@color/primary"
            android:textSize="15sp"
            app:backgroundTint="@color/element_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_start" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
