<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    tools:context=".RulesFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_oldman1"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="92dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/oldman"
            app:layout_constraintBottom_toBottomOf="@id/tv_m1_oldman"
            app:layout_constraintEnd_toStartOf="@id/tv_m1_oldman" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/message"
            android:backgroundTint="@color/element_bg"
            android:fontFamily="@font/joystix"
            android:padding="8dp"
            android:text="@string/m1_oldman"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/tv_m1_oldman"/>

        <ImageView
            android:id="@+id/iv_player1"
            android:layout_width="44dp"
            android:layout_height="36dp"
            android:src="@drawable/anonymous"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toTopOf="@id/ti_m1_player"
            app:layout_constraintStart_toEndOf="@id/ti_m1_player"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="4dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_m1_oldman"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/ti_m1_player"
            android:maxLines="1"
            android:hint="@string/username_hint"
            app:hintEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="25"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/message"
                android:backgroundTint="@color/element_bg"
                android:fontFamily="@font/joystix"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:id="@+id/et_m1_player">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <ImageView
            android:id="@+id/iv_oldman2"
            android:visibility="gone"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="280dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/oldman"
            app:layout_constraintBottom_toBottomOf="@id/tv_m2_oldman"
            app:layout_constraintEnd_toStartOf="@id/tv_m2_oldman" />
        <TextView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/message"
            android:backgroundTint="@color/element_bg"
            android:fontFamily="@font/joystix"
            android:padding="8dp"
            android:text="@string/m2_oldman"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintTop_toBottomOf="@id/ti_m1_player"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" 
            android:id="@+id/tv_m2_oldman"/>

        <ImageView
            android:visibility="gone"
            android:id="@+id/iv_player2"
            android:layout_width="44dp"
            android:layout_height="36dp"
            android:src="@drawable/anonymous"
            app:layout_constraintTop_toTopOf="@id/tv_m2_player"
            app:layout_constraintStart_toEndOf="@id/tv_m2_player"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="4dp"/>

        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/message"
            android:backgroundTint="@color/element_bg"
            android:fontFamily="@font/joystix"
            android:padding="8dp"
            android:text="@string/got_it_message"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintTop_toBottomOf="@id/tv_m2_oldman"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/tv_m2_player"/>
        <ImageView
            android:visibility="gone"
            android:id="@+id/iv_oldman3"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="244dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/oldman"
            app:layout_constraintBottom_toBottomOf="@id/tv_m3_oldman"
            app:layout_constraintEnd_toStartOf="@id/tv_m3_oldman" />
        <TextView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/message"
            android:backgroundTint="@color/element_bg"
            android:fontFamily="@font/joystix"
            android:padding="8dp"
            android:text="@string/m3_oldman"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintTop_toBottomOf="@id/tv_m2_player"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/tv_m3_oldman"/>

        <ImageView
            android:visibility="gone"
            android:id="@+id/iv_player3"
            android:layout_width="44dp"
            android:layout_height="36dp"
            android:src="@drawable/anonymous"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="@id/tv_m3_player"
            app:layout_constraintStart_toEndOf="@id/tv_m3_player"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="4dp"/>

        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/message"
            android:backgroundTint="@color/element_bg"
            android:fontFamily="@font/joystix"
            android:padding="8dp"
            android:text="@string/lets_go_message"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintTop_toBottomOf="@id/tv_m3_oldman"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/tv_m3_player"/>

        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="80dp"
            android:layout_marginBottom="40dp"
            android:id="@+id/btn_respond"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@drawable/button"
            android:text="@string/respond"
            android:textColor="@color/primary"
            android:textSize="15sp"
            app:backgroundTint="@color/element_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_m3_player" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
